cause_of_death edited

--- a/mass_shooting/shooting_data.ipynb
+++ b/mass_shooting/shooting_data.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,31 +44,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-63-672be738dd70>, line 8)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-63-672be738dd70>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    'location_id': loc_id,\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'code': 1054, 'message': \"Unknown column '' in 'field list'\"}"
+     },
+     "metadata": {},
+     "execution_count": 86
     }
    ],
    "source": [
     "base_url = \"https://www.gunpolicy.org/index.php\"\n",
-    "params = {'key': gp_key,\n",
-    "'clientid': client_id,\n",
-    "'option': 'com_api',\n",
-    "'app': 'gpodatapage',\n",
-    "'format': 'row',\n",
-    "'resource': 'gettopcategories'\n",
-    "'location_id': loc_id,\n",
-    "'category': 'Death & Injury',\n",
-    "# 'category': 'gun_death_and_injury',\n",
+    "params = {\n",
+    "    'option': 'com_api',\n",
+    "    'app': 'gpodatapage',\n",
+    "    'clientid': client_id,\n",
+    "    'key': gp_key,\n",
+    "    'format': 'row',\n",
+    "    'resource': 'getcategorydata',\n",
+    "    'Category': 'Death & Injury',\n",
+    "    'location_id': loc_id,\n",
+    "    # 'Alias name': 'gun_death_and_injury',\n",
+    "# 'category': 'civilian_guns',\n",
     "}\n",
-    "\n",
+    "# Death & Injury\n",
+    "# gun_death_and_injury\n",
     "resp = requests.get(base_url, params = params).json()\n",
     "resp"
    ]
