--- a/cause_of_death.ipynb
+++ b/cause_of_death.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://wonder.cdc.gov/wonder/help/mcd.html#2014-Revision."
+    "Data collected from: http://wonder.cdc.gov/wonder/help/mcd.html#2014-Revision."
    ]
   },
   {
