--- a/mass_shooting/shooting_data.ipynb
+++ b/mass_shooting/shooting_data.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598123472718",
+   "name": "python_defaultSpec_1598217366325",
    "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'code': 1054, 'message': \"Unknown column '' in 'field list'\"}"
+      "text/plain": "{'result': {'id': '242',\n  'location_id': '194',\n  'location': 'United States',\n  'columnValue': '',\n  'columnPreamble': ''}}"
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 20
     }
    ],
    "source": [
@@ -65,12 +65,17 @@
     "    'key': gp_key,\n",
     "    'format': 'row',\n",
     "    'resource': 'getcategorydata',\n",
-    "    'Category': 'Death & Injury',\n",
+    "    'category': 'civilian_guns',\n",
     "    'location_id': loc_id,\n",
+    "    #  'location_id': 242,\n",
     "    # 'Alias name': 'gun_death_and_injury',\n",
     "# 'category': 'civilian_guns',\n",
+    "# getcategorydata\n",
+    "# getdpcategories\n",
     "}\n",
+    " \t# getcitationsbycategory\n",
     "# Death & Injury\n",
+    "# getlocations\n",
     "# gun_death_and_injury\n",
     "resp = requests.get(base_url, params = params).json()\n",
     "resp"
@@ -78,11 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "    id location_id       location columnValue columnPreamble\n0  242         194  United States                           ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>location_id</th>\n      <th>location</th>\n      <th>columnValue</th>\n      <th>columnPreamble</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>242</td>\n      <td>194</td>\n      <td>United States</td>\n      <td></td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "source": [
-    "resp['result']['columnValue']"
+    "pd.json_normalize(resp['result'])"
    ]
   },
   {
