updated final-analysis and created graph

--- a/aaron/analysis/final_analysis.ipynb
+++ b/aaron/analysis/final_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4             93.0           0.010  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
     "plt.ylabel('Total Gun Laws', fontsize = 14)\n",
     "plt.legend(loc = 'best', fontsize = 14)\n",
     "plt.grid()\n",
-    "#plt.savefig('output_data/caltex_gunlaw_deathpercent.png')\n",
+    "plt.savefig('../output_data/caltex_gunlaw_deathpercent.png')\n",
     "plt.show()"
    ]
   },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "Ttest_indResult(statistic=62034.12977404877, pvalue=1.9878108863098753e-76)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "Ttest_indResult(statistic=-67.75285971824363, pvalue=3.9309575890415895e-23)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Ttest_indResult(statistic=-77.8793927228608, pvalue=2.6879608459815986e-24)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,20 +451,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +464,7 @@
        "Ttest_indResult(statistic=-80.11632342522708, pvalue=1.942454099820803e-24)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +485,7 @@
        "Ttest_indResult(statistic=-30.46763582494155, pvalue=6.093706336037485e-17)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +506,7 @@
        "Ttest_indResult(statistic=-30.68563034406074, pvalue=5.377505267539355e-17)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
