--- a/guns_data.ipynb
+++ b/guns_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
     "import numpy as np\n",
-    "output_file = \"output_data/guns_state.csv\""
+    "output_file = \"Resources/guns_state.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>YEAR</th>\n      <th>STATE</th>\n      <th>RATE</th>\n      <th>DEATHS</th>\n      <th>URL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2018.0</td>\n      <td>AL</td>\n      <td>21.8</td>\n      <td>1064.0</td>\n      <td>/nchs/pressroom/states/alabama/al.htm</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2018.0</td>\n      <td>AK</td>\n      <td>21.0</td>\n      <td>155.0</td>\n      <td>/nchs/pressroom/states/alaska/ak.htm</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2018.0</td>\n      <td>AZ</td>\n      <td>15.3</td>\n      <td>1147.0</td>\n      <td>/nchs/pressroom/states/arizona/az.htm</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2018.0</td>\n      <td>AR</td>\n      <td>18.9</td>\n      <td>573.0</td>\n      <td>/nchs/pressroom/states/arkansas/ar.htm</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2018.0</td>\n      <td>CA</td>\n      <td>7.5</td>\n      <td>3040.0</td>\n      <td>/nchs/pressroom/states/california/ca.htm</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 2
     }
    ],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>YEAR</th>\n      <th>STATE</th>\n      <th>RATE</th>\n      <th>DEATHS</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>2018.0</td>\n      <td>CA</td>\n      <td>7.5</td>\n      <td>3040.0</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>2018.0</td>\n      <td>TX</td>\n      <td>12.2</td>\n      <td>3522.0</td>\n    </tr>\n    <tr>\n      <th>54</th>\n      <td>2017.0</td>\n      <td>CA</td>\n      <td>7.9</td>\n      <td>3184.0</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>2017.0</td>\n      <td>TX</td>\n      <td>12.4</td>\n      <td>3513.0</td>\n    </tr>\n    <tr>\n      <th>104</th>\n      <td>2016.0</td>\n      <td>CA</td>\n      <td>7.9</td>\n      <td>3184.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 3
     }
    ],
    "source": [
@@ -142,7 +142,7 @@
   "kernelspec": {
    "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1598105441930"
+   "name": "python_defaultSpec_1598392390403"
   },
   "language_info": {
    "codemirror_mode": {
